--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,13 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>review-bot-2</name>
     <description>Review Bot for NTB/NTP team</description>
+
     <properties>
         <java.version>11</java.version>
+        <telegrambots.version>5.2.0</telegrambots.version>
+        <camunda.version>1.3.0</camunda.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -32,7 +36,12 @@
         <dependency>
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots</artifactId>
-            <version>5.2.0</version>
+            <version>${telegrambots.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.camunda.bpm.extension</groupId>
+            <artifactId>camunda-bpm-spring-boot-starter</artifactId>
+            <version>${camunda.version}</version>
         </dependency>
 
         <dependency>
