--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <properties>
         <java.version>11</java.version>
         <telegrambots.version>5.2.0</telegrambots.version>
-        <camunda.version>1.3.0</camunda.version>
+        <camunda.version>7.15.0</camunda.version>
     </properties>
 
     <dependencies>
@@ -39,7 +39,7 @@
             <version>${telegrambots.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.camunda.bpm.extension</groupId>
+            <groupId>org.camunda.bpm.springboot</groupId>
             <artifactId>camunda-bpm-spring-boot-starter</artifactId>
             <version>${camunda.version}</version>
         </dependency>
