- approve/decline review and it's tests were added - camunda scheme was changed - h2 is test db now

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,3 +12,6 @@ bot:
 jira:
   link: ${JIRA_LINK}
   dashboards: ${JIRA_DASHBOARDS}
+
+settings:
+  number-of-review-stages: ${NUMBER_OF_REVIEW_STAGES}
