--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,10 +1,7 @@
 spring:
   datasource:
-    driver-class-name: org.postgresql.Driver
-    url: ${DB_URL}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
-
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:mydb
 
 server:
   port: 8081
@@ -16,6 +13,9 @@ bot:
 jira:
   link: "https://test.com/"
   dashboards: "TEST1"
+
+settings:
+  number-of-review-stages: 2
 
 camunda:
   bpm:
