--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>review-bot-2</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>review-bot-2</name>
-    <description>Review Bot for NTB/NTP team</description>
+    <description>Review Bot</description>
 
     <properties>
         <java.version>1.8</java.version>
